--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodificador</title>
-    <link rel="shortcut icon" href="./assets/img/crystal.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/img/crystals.png" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,13 +15,15 @@
 
 <body>
     <header>
-        <img id="logo" src="./assets/img/crystal.png">
+        <img id="logo" src="./assets/img/crystals.png">
         <h1>Decodificador</h1>
     </header>
     <main>
         <div class="container block-input">
             <div class="block-input__text">
-                Digite seu texto
+                <textarea placeholder="Digite seu texto">
+
+                </textarea>
             </div>
             <div class="block-input__footer">
                 <p class="aviso">
@@ -35,7 +37,7 @@
         </div>
         <div class="container block-show">
             <div class="block-show__text">
-                <img id="show__img" src="./assets/img/crystal(1).png">
+                <img id="show__img" src="./assets/img/crystals.png">
                 <p class="title">Nenhuma mensagem encontrada.</p>
                 <p class="info">Digite um texto que você deseja criptografar ou descriptografar.</p>
             </div>
