--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <img id="show__img" src="./assets/img/crystals.png">
                 <p class="show_txt">Nenhuma mensagem encontrada.</p>
                 <p class="info">Digite um texto que você deseja criptografar ou descriptografar.</p>
+                <button id="btnCopy">Copiar</button>
             </div>
         </div>
     </main>
